infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: www.herbaquoter.online
      http:
        paths:

    # ********** Auth -NEST ***************
          - path: /doc/auth-products/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-products-srv
                port:
                  number: 3009


          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-products-srv
                port:
                  number: 3009


                  
    # ********** PRODUCTS - NEST ***************
          - path: /api/products/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-products-srv
                port:
                  number: 3009

    # ********** categories - NEST ***************
          - path: /api/categories/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-products-srv
                port:
                  number: 3009

    # ********** SEED - NEST ***************
          - path: /api/seed/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-products-srv
                port:
                  number: 3009

    # ********** FILES - NEST  Products - users ***************
          - path: /api/files/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-products-srv
                port:
                  number: 3009


    # ********** Quoters - NODE ***************
          - path: /api/quoters/?(.*)
            pathType: Prefix
            backend:
              service:
                name: quoters-srv
                port:
                  number: 3010

    # ********** Quoters - NODE ***************
          - path: /api/files-quoters/?(.*)
            pathType: Prefix
            backend:
              service:
                name: quoters-srv
                port:
                  number: 3010
                  
                  
     # ********** DOC SWAGGER - NODE ***************
          - path: /doc/quoters/?(.*)
            pathType: Prefix
            backend:
              service:
                name: quoters-srv
                port:
                  number: 3010

    # ********** CLIENT - REACT ***************
                
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3011
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.herbaquoter.online'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
